--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -2,7 +2,6 @@
 cmake_minimum_required(VERSION 3.13)
 
 # initialize the SDK based on PICO_SDK_PATH
-# note: this must happen before project()
 include(pico_sdk_import.cmake)
 
 project(wiiClassic)
@@ -12,11 +11,12 @@ pico_sdk_init()
 
 # This will be made into a .uf2
 add_executable(${PROJECT_NAME}
+    ClassicController.c    
     main.c
 )
     
 # pull in common dependencies
-target_link_libraries(${PROJECT_NAME} pico_stdlib pico_binary_info hardware_i2c)
+target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_i2c)
 
 # Enable USB out and disable UART out
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
